# poker-algorithm

./: LICENSE  NiuNiu.php  README.MD  composer.json  example.php  php-example.php
doc/: niuniu.md  sangong.md  texas.md
php/: NiuNiu.php  Texas.php
php-ext/: .gitignore  CMakeLists.txt  config.m4  config.w32  php_poker_algorithm.h  poker_algorithm.c  poker_niuniu.c  tmp-php.ini
php-ext/tests/: 001.phpt  002.phpt  003.phpt
src/: Poker.php
src/Games/: NiuNiu.php  SanGong.php  Texas.php
src/Traits/: CardWithValue.php
